<resources>
    <!--App basic strings -->
    <string name="app_name">Foodator</string>
    <string name="foodator">Foodator</string>

    <!-- Account Settings fragments -->
    <string name="edit_profile">Edit Profile</string>
    <string name="sign_out">Sign Out</string>

    <!--Firebase-->
    <string name="auth_failed">Authentication Failed</string>
    <string name="auth_success">Authentication Success</string>
    <string name="dbname_users">users</string>
    <string name="dbname_user_account_settings">user_account_settings</string>
    <string name="dbname_photos">photos</string>
    <string name="dbname_user_photos">user_photos</string>
    <string name="dbname_following">following</string>
    <string name="dbname_followers">followers</string>
    <string name="dbname_notifications">notifications</string>
    <string name="dbname_user_locations">user_locations</string>
    <string name="dbname_liked_photos">liked_photos</string>
    <string name="dbname_comments">comments</string>
    <string name="dbname_recipe">recipe</string>
    <string name="dbname_nutrition">nutrition</string>
    <string name="attr_profile_pic">profile_photo</string>
    <string name="attr_profile_photo">profile_photo</string>
    <string name="attr_date">date_created</string>
    <string name="attr_user_id">user_id</string>
    <string name="attr_ingredients">Ingredients</string>
    <string name="attr_steps">Steps</string>
    <!-- Zomato -->
    <string name="zomato_search">https://developers.zomato.com/api/v2.1/search</string>
    <!-- Activities -->
    <string name="calling_activity">Calling Activity</string>
    <string name="profile_activity">Profile Activity</string>
    <string name="return_to_fragment">return_to_fragment</string>
    <string name="home_activity">HomeActivity</string>
    <string name="viewRestaurant_activity">ViewRestaurantActivity</string>

    <!-- Share Activity strings -->
    <string name="photo">PHOTO</string>
    <string name="open_camera">Open Camera</string>
    <string name="next">Next</string>
    <string name="gallery">Gallery</string>
    <string name="fit_status">Fit Status</string>
    <string name="post">Post</string>
    <string name="description">Description</string>
    <string name="new_photo">New Photo</string>

    <!--Profile activity strings -->
    <string name="profile_name">Profile Name</string>
    <string name="display_name">Display Name</string>
    <string name="selected_image">Selected Image</string>
    <string name="selected_bitmap">Selected Bitmap</string>
    <string name="number_zero">0</string>
    <string name="photo_id">Photo Id</string>
    <string name="posts">Posts</string>

    <!-- Strings -->
    <string name="string_empty" />
    <string name="string_search">Search</string>
    <string name="string_noresults">No results found !</string>
    <string name="string_followers">Followers</string>
    <string name="string_identify">Identify</string>
    <string name="string_recipe">Recipe</string>
    <string name="string_report">Report</string>
    <string name="string_hello">Hello,</string>
    <string name="string_follow">Follow</string>
    <string name="string_following">Following</string>
    <string name="string_photo">Photo</string>
    <string name="string_delete">Delete</string>
    <string name="string_load_more">Load More</string>
    <string name="string_load_complete">You have reached the end of feed</string>
    <string name="string_restaurant">Restaurant</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="string_searching_nearby">Searching nearby</string>
    <string name="string_adding_spices">Adding Spices</string>
    <string name="string_food_details">Food Details</string>
    <string name="string_comments">Comments</string>
    <string name="string_post">Post</string>
    <string name="swipe_for_camera">Swipe For Camera</string>

    <!-- tensorflow -->
    <string name="description_info">Info</string>
    <string name="request_permission">This sample needs camera permission.</string>
    <string name="camera_error">This device doesn\'t support Camera2 API.</string>
    <string name="string_ingredients">Ingredients</string>
    <string name="string_steps">Steps</string>
    <string name="string_calories">Calories</string>
    <string name="string_carbs">Carbs</string>
    <string name="string_fat">Fat</string>
    <string name="string_protein">Protein</string>
    <string name="string_quantity">per 100g</string>
</resources>
