<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/string_calories"
            android:textSize="25sp"
            android:padding="10dp"
            android:id="@+id/caloriesTitle"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:background="@color/post_top_color"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:padding="10dp"
            android:textAlignment="center"
            android:textColor="@color/dark_violet"
            android:layout_marginStart="150dp"
            android:background="@color/white"
            android:id="@+id/calorieTv"
            />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/string_carbs"
            android:textSize="25sp"
            android:padding="10dp"
            android:id="@+id/carbsTitle"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:background="@color/post_top_color"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:padding="10dp"
            android:textAlignment="center"
            android:textColor="@color/dark_violet"
            android:layout_marginStart="150dp"
            android:background="@color/white"
            android:id="@+id/carbsTv"
            />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/string_fat"
            android:textSize="25sp"
            android:padding="10dp"
            android:id="@+id/fatTitle"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:background="@color/post_top_color"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:padding="10dp"
            android:textAlignment="center"
            android:textColor="@color/dark_violet"
            android:layout_marginStart="150dp"
            android:background="@color/white"
            android:id="@+id/fatTv"
            />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/string_protein"
            android:textSize="25sp"
            android:padding="10dp"
            android:id="@+id/proteinTitle"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:background="@color/post_top_color"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:padding="10dp"
            android:textAlignment="center"
            android:textColor="@color/dark_violet"
            android:layout_marginStart="150dp"
            android:background="@color/white"
            android:id="@+id/protienTv"
            />
    </RelativeLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:layout_marginStart="10dp"
        android:text="@string/string_quantity"
        android:textColor="@color/black"
        android:textSize="18sp"
        />
</LinearLayout>