<merge xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <TextView
            android:id="@+id/textFollowing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/string_following"
            android:textColor="@color/dark_violet"
            android:textSize="13sp"
            android:textAllCaps="true"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="0dp"
            android:layout_marginRight="20dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="5dp"
            app:layout_constraintTop_toBottomOf="@+id/tvFollowing"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/textFollowers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/string_followers"
            android:textColor="@color/dark_violet"
            android:textSize="13sp"
            android:textAllCaps="true"
            android:layout_marginLeft="20dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="5dp"
            app:layout_constraintTop_toBottomOf="@+id/tvFollowers"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="0dp"
            app:layout_constraintRight_toLeftOf="@+id/textFollowing"
            android:layout_marginRight="0dp"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/tvFollowing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/number_zero"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="0dp"
            android:layout_marginRight="50dp"
            app:layout_constraintRight_toRightOf="parent" />

        <TextView
            android:id="@+id/tvFollowers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/number_zero"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginLeft="50dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="0dp"
            app:layout_constraintRight_toLeftOf="@+id/tvFollowing"
            android:layout_marginRight="8dp"
            app:layout_constraintHorizontal_bias="0.0" />


    </android.support.constraint.ConstraintLayout>

</merge>