<merge xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/center_user_profile">
        <ToggleButton
            android:id="@+id/textFollowStatus"
            android:layout_width="170dp"
            android:layout_height="27dp"
            android:background="@drawable/round_background_color"
            android:paddingBottom="2dp"
            android:paddingLeft="25dp"
            android:paddingRight="25dp"
            android:paddingTop="2dp"
            android:textOn="@string/string_following"
            android:textOff="@string/string_follow"
            android:gravity="center"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="17sp"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="5dp"
            app:layout_constraintTop_toBottomOf="@+id/textFollowers"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="0dp" />

        <TextView
            android:id="@+id/textFollowing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Following"
            android:textColor="@color/darkgrey"
            android:textSize="14sp"
            android:layout_marginTop="2dp"
            app:layout_constraintTop_toBottomOf="@+id/tvFollowing"
            android:layout_marginRight="-1dp"
            app:layout_constraintRight_toRightOf="parent" />

        <TextView
            android:id="@+id/textFollowers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Followers"
            android:textColor="@color/darkgrey"
            android:textSize="14sp"
            app:layout_constraintRight_toLeftOf="@+id/textFollowing"
            android:layout_marginRight="0dp"
            app:layout_constraintLeft_toRightOf="@+id/textPosts"
            android:layout_marginLeft="0dp"
            app:layout_constraintHorizontal_bias="0.561"
            android:layout_marginTop="4dp"
            app:layout_constraintTop_toBottomOf="@+id/tvFollowers" />

        <TextView
            android:id="@+id/textPosts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/posts"
            android:textColor="@color/darkgrey"
            android:textSize="14sp"
            android:layout_marginLeft="0dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="0dp"
            app:layout_constraintTop_toBottomOf="@+id/tvPosts" />

        <TextView
            android:id="@+id/tvFollowing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/number_zero"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="4dp"
            android:layout_marginRight="16dp"
            app:layout_constraintRight_toRightOf="parent" />

        <TextView
            android:id="@+id/tvFollowers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/number_zero"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintRight_toLeftOf="@+id/tvFollowing"
            android:layout_marginRight="0dp"
            app:layout_constraintLeft_toRightOf="@+id/tvPosts"
            android:layout_marginLeft="0dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="0dp"
            app:layout_constraintHorizontal_bias="0.511" />

        <TextView
            android:id="@+id/tvPosts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:text="@string/number_zero"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginLeft="9dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="-22dp" />
    </android.support.constraint.ConstraintLayout>

</merge>